welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:4: error: illegal start of simple expression
avance();avance();avance();avance();gauche();avance();avance();droite(;avance();avance();avance();avance();gauche();avance();avance();avance();avance()
                                                                      ^