welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
var tours: Int = 0
var x: Int = 0
for (tours<- 1 to 6){
avance();avance();avance();avance();gauche();avance();avance();droite(;avance();avance();avance();avance();gauche();avance();avance();avance();avance()
}